--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <dd>
             <h2>Freelance<span>Web Designer/ Front-End Developer 2015-present</span></h2>
             <ul class="unstyle">
-                <li>Providing internet related services including websites design,
-                    front-end web development, domain name registration, web hosting,
+                <li>Providing internet related services including front-end web development, websites design,
+                    domain name registration, web hosting,
                     on-site SEO. Integrating social media applications on websites and blogs. Performing routine
                     maintenance and content changes on client websites.
 
@@ -118,21 +118,21 @@
             </ul>
         </dd>
         <dd>
-            <h2>Own Private Enterprise<span>CEO 2008 - 2012</span></h2>
+            <h2>Own Private Enterprise<span>CEO 2006 - 2012</span></h2>
             <ul class="unstyle">
                 <li>Designing, launching and running new Business,
                     Organising and running a network of 5 shops.</li>
 
             </ul>
 
-            <h2>Green Dog publishing, Ukraine<span>HR Manager 2001 - 2008
+           <!-- <h2>Green Dog publishing, Ukraine<span>HR Manager 2001 - 2008
                 </span></h2>
             <ul class="unstyle">
                 <li>Recruiting, on-boarding and training employees
                     Policy development and documentation
                     Organisation development, departmental planning</li>
 
-            </ul>
+            </ul>-->
         </dd>
 
         <dd class="clear"></dd>
