changes in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>
                 Cell: <span class="tel">+49 170 66 458 99</span><br />
                 Email: <a class="email" href="mailto:contact@zatoloka.com">contact@zatoloka.com</a><br>
-                <a href="https://zatoloka.com" target="_blank">https://zatoloka.com</a><br>
+                <a href="http://zatoloka.com" target="_blank">www.zatoloka.com</a><br>
 
 
                 <Address>Falchenstrasse 106 <br>
